--- a/Expense Tracker/index.html
+++ b/Expense Tracker/index.html
@@ -6,36 +6,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expense Tracker</title>
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 
 <body>
-    <h1>Expense Tracker</h1>
-    <div id="container">
-        <form id="my-form">
-            <label for="amount">Expense Amount</label>
-            <br>
-            <input type="text" id="amount">
-            <br>
-            <label for="description">Description</label>
-            <br>
-            <input type="text" id="description">
-            <br>
-            <label for="category">Category</label>
-            <br>
-            <select name="category" id="category">
-                <option value="movies">Movies</option>
-                <option value="holidays">Holidays</option>
-                <option value="sports">Sports</option>
-                <option value="study">Study</option>
-            </select>
-            <br>
-            <input type="submit" value="Add Expense">
-        </form>
+    <h1 class="text-center py-4">Expense Tracker</h1>
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-4 mx-auto">
+                <form id="my-form">
+                    <div class="mb-3">
+                        <label for="amount" class="form-label">Expense Amount</label>
+                        <input type="text" class="form-control" id="amount">
+                    </div>
+                    <div class="mb-3">
+                        <label for="description" class="form-label">Description</label>
+                        <input type="text" class="form-control" id="description">
+                    </div>
+                    <div class="mb-3">
+                        <label for="category" class="form-label">Category</label>
+                        <select name="category" class="form-select" id="category">
+                            <option value="movies">Movies</option>
+                            <option value="holidays">Holidays</option>
+                            <option value="sports">Sports</option>
+                            <option value="study">Study</option>
+                        </select>
+                    </div>
+                    <input type="submit" class="btn btn-primary mb-3" value="Add Expense">
+                </form>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4 mx-auto">
+                <ul id="items" class="list-group"></ul>
+            </div>
+        </div>
     </div>
-    <div id="list">
-        <ul id="items"></ul>
-    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js"></script>
     <script src="main.js"></script>
 </body>
 
